--- a/package.json
+++ b/package.json
@@ -9,9 +9,50 @@
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
-    "lint": "turbo run lint"
+    "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "test": "turbo run test",
+    "test:api": "cd apps/api && npm run test",
+    "test:web": "cd apps/web && npm run test",
+    "test:coverage": "turbo run test:coverage",
+    "typecheck": "turbo run typecheck",
+    "prepare": "husky",
+    "env:dev": "./scripts/setup-env.sh development",
+    "env:staging": "./scripts/setup-env.sh staging",
+    "env:prod": "./scripts/setup-env.sh production",
+    "env:validate": "./scripts/validate-env.sh",
+    "docker:dev": "docker-compose up --build",
+    "docker:staging": "docker-compose -f docker-compose.staging.yml up --build",
+    "docker:prod": "docker build -t optimizely-ai .",
+    "deploy:dev": "./scripts/deploy/deploy.sh development",
+    "deploy:staging": "./scripts/deploy/deploy.sh staging",
+    "deploy:production": "./scripts/deploy/deploy.sh production",
+    "deploy:staging:bg": "./scripts/deploy/deploy.sh staging --blue-green",
+    "deploy:production:bg": "./scripts/deploy/deploy.sh production --blue-green",
+    "deploy:dry-run": "./scripts/deploy/deploy.sh staging --dry-run"
   },
   "devDependencies": {
-    "turbo": "^1.13.0"
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@types/jest": "^30.0.0",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.5.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "husky": "^9.1.7",
+    "jest": "^30.0.2",
+    "jest-environment-node": "^30.0.2",
+    "lint-staged": "^16.1.2",
+    "prettier": "^3.6.0",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.4.0",
+    "turbo": "^2.5.4"
   }
 }
