fix: resolve TypeScript errors, update configurations, and improve build setup
- Fixed TypeScript compilation errors in API services
- Updated turbo.json from deprecated 'pipeline' to 'tasks' syntax
- Added comprehensive .gitignore patterns for Next.js and build artifacts
- Updated ESLint configurations for v9 compatibility
- Fixed Express middleware types and Prisma null checks
- Added package manager field and module type to package.json
- Resolved namespace declaration warnings

--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,39 @@ node_modules/
 
 # Task files
 # tasks.json
-# tasks/ 
+# tasks/
+
+# Next.js build output and cache
+.next/
+out/
+
+# Turbo cache
+.turbo/
+
+# Build outputs
+build/
+dist/
+
+# Coverage reports
+coverage/
+
+# Redis
+dump.rdb
+*.rdb
+
+# Local development files
+.local/
+
+# Docker
+.dockerignore
+
+# Test outputs
+test-results/
+playwright-report/
+
+# Temporary files
+tmp/
+temp/
+
+# TypeScript build info
+*.tsbuildinfo
