--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -1,10 +1,7 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "../.eslintrc.json"
-  ],
+  "extends": ["next/core-web-vitals", "prettier"],
   "rules": {
-    "react/react-in-jsx-scope": "off",
-    "@next/next/no-html-link-for-pages": "off"
+    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/no-explicit-any": "warn"
   }
 }
