--- a/apps/tracking/tsconfig.json
+++ b/apps/tracking/tsconfig.json
@@ -25,7 +25,8 @@
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "exactOptionalPropertyTypes": true
+    "exactOptionalPropertyTypes": true,
+    "downlevelIteration": true
   },
   "include": [
     "src/**/*"
