--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,6 +33,8 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@apollo/server": "^4.12.2",
+    "@graphql-tools/schema": "^10.0.23",
     "@prisma/client": "^6.10.1",
     "@types/ioredis": "^4.28.10",
     "compression": "^1.8.0",
@@ -40,6 +42,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.1",
+    "graphql": "^16.11.0",
+    "graphql-redis-subscriptions": "^2.7.0",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-tools": "^9.0.18",
+    "graphql-type-json": "^0.3.2",
+    "graphql-upload": "^17.0.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
     "morgan": "^1.10.0",
