--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,6 +21,7 @@
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^20.5.0",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
@@ -37,6 +38,7 @@
     "@graphql-tools/schema": "^10.0.23",
     "@prisma/client": "^6.10.1",
     "@types/ioredis": "^4.28.10",
+    "@types/ws": "^8.18.1",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -51,6 +53,7 @@
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
     "morgan": "^1.10.0",
-    "prisma": "^6.10.1"
+    "prisma": "^6.10.1",
+    "ws": "^8.18.2"
   }
 }
