--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,9 +21,11 @@
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.17",
+    "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^20.5.0",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
     "eslint": "^8.44.0",
@@ -53,8 +55,10 @@
     "graphql-upload": "^17.0.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
+    "js-yaml": "^4.1.0",
     "morgan": "^1.10.0",
     "prisma": "^6.10.1",
+    "swagger-ui-express": "^5.0.1",
     "ws": "^8.18.2"
   }
 }
