--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.0",
+    "ioredis-mock": "^8.9.0",
     "prettier": "^3.6.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
