--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prepare": "husky",
     "safety-check": "node scripts/verify-critical-files.cjs",
     "emergency-recovery": "node scripts/emergency-recovery.cjs",
-    "safe-commit": "npm run safety-check && npm run build && npm run test",
+    "update-context": "node scripts/update-context.cjs",
+    "safe-commit": "npm run safety-check && npm run update-context && npm run build && npm run test",
     "env:dev": "./scripts/setup-env.sh development",
     "env:staging": "./scripts/setup-env.sh staging",
     "env:prod": "./scripts/setup-env.sh production",
