--- a/apps/api/.eslintrc.json
+++ b/apps/api/.eslintrc.json
@@ -4,21 +4,28 @@
     "es6": true,
     "jest": true
   },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    "project": "./tsconfig.json"
+  },
+  "plugins": ["@typescript-eslint"],
   "extends": [
     "eslint:recommended"
   ],
   "rules": {
     "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/no-explicit-any": "warn",
     "no-console": "warn",
     "no-debugger": "error"
-  },
-  "parserOptions": {
-    "ecmaVersion": 2020,
-    "sourceType": "module"
   },
   "ignorePatterns": [
     "src/generated/**",
     "**/*.test.ts",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "dist/**",
+    "node_modules/**"
   ]
 }
