--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,8 +33,9 @@
     "eslint-plugin-prettier": "^5.5.0",
     "ioredis-mock": "^8.9.0",
     "prettier": "^3.6.0",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@apollo/server": "^4.12.2",
