--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -1,7 +1,37 @@
 {
   "extends": ["next/core-web-vitals", "prettier"],
+  "env": {
+    "browser": true,
+    "es2022": true,
+    "node": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2022,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "globals": {
+    "WebSocket": "readonly",
+    "HTMLDivElement": "readonly",
+    "RequestInit": "readonly",
+    "URLSearchParams": "readonly"
+  },
   "rules": {
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
-    "@typescript-eslint/no-explicit-any": "warn"
+    "@typescript-eslint/no-explicit-any": "warn",
+    "no-undef": "off"
+  },
+  "overrides": [
+    {
+      "files": ["*.config.js", "*.config.ts"],
+      "env": {
+        "node": true
+      },
+      "rules": {
+        "no-undef": "off"
+      }
   }
+  ]
 }
