--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,14 +15,19 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
+    "@tabler/icons-react": "^3.34.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.22.0",
     "lucide-react": "^0.263.1",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.7.2",
+    "tailwind-merge": "^3.3.1",
     "task-master-ai": "^0.18.0"
   },
   "devDependencies": {
+    "@stagewise/toolbar": "^0.4.9",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
