feat(analytics): Add comprehensive demo graphics and fix 3 critical test errors
✨ Analytics Demo Graphics Enhancement:
- Added LineChart and BarChart components to analytics page
- Replaced placeholder text with interactive demo charts
- Revenue Trend: 6-month financial data with smooth line chart
- User Activity: Weekly activity data with animated bar chart
- Industry Performance: Horizontal bar chart comparing sectors
- Conversion Funnel: Step-by-step conversion visualization
- Added rich demo data with realistic business metrics
- Enhanced visual sections with performance indicators

🔧 Fixed 3 Critical Test Errors:
1. React Import Error: Added missing React imports in test files
2. API Client Mock Error: Fixed vi.mocked issues with proper module imports
3. Chart Component Import Error: Corrected named exports for chart components

✅ Test Improvements:
- Fixed Dashboard.test.tsx React import and API mocking
- Corrected ChartComponents.test.tsx import statements
- Improved mock API client integration for better test reliability
- Resolved vi.mocked function compatibility issues

📊 Demo Data Enhancements:
- Revenue: ,890 with 12.5% growth trend
- Users: 24,789 active with 8.2% increase
- Conversion: 8.6% rate with 3.1% improvement
- Industry benchmarks: FinTech leading at 31.2%
- Conversion funnel: 35% visitor-to-signup, 70.8% trial-to-conversion

🎨 Visual Improvements:
- Animated chart transitions and interactions
- Responsive chart containers for all screen sizes
- Color-coded performance indicators
- Professional dashboard aesthetic with hover effects

--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
     "turbo": "^2.5.4"
+  },
+  "dependencies": {
+    "lucide-react": "^0.536.0"
   }
 }
