--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^12.22.0",
     "lucide-react": "^0.263.1",
     "next": "^13.4.19",
+    "next-auth": "^4.24.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.7.2",
@@ -27,7 +28,7 @@
     "task-master-ai": "^0.18.0"
   },
   "devDependencies": {
-    "@stagewise/toolbar": "^0.4.9",
+    "@stagewise/toolbar": "^0.6.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
