fix(deploy): Make husky conditional in prepare script for Railway deployment
🚀 Deployment Fix:
- Updated prepare script to only run husky if it exists in node_modules
- Prevents Railway production build failures where husky is not installed
- Uses conditional shell command: 'if [ -d 'node_modules/husky' ]; then husky; fi'

🐛 Issue Resolved:
- Railway runs 'npm ci --only=production' which excludes dev dependencies
- Husky is a dev dependency, so not available in production builds
- Previous prepare script 'husky' would fail with 'command not found'
- Now safely skips husky setup in production environments

✅ Production Safety:
- Development: husky runs normally for git hooks
- Production: husky step is skipped, build continues successfully
- No additional dependencies required for conditional logic

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:web": "cd apps/web && npm run test",
     "test:coverage": "turbo run test:coverage",
     "typecheck": "turbo run typecheck",
-    "prepare": "husky",
+    "prepare": "if [ -d 'node_modules/husky' ]; then husky; fi",
     "safety-check": "node scripts/verify-critical-files.cjs",
     "emergency-recovery": "node scripts/emergency-recovery.cjs",
     "update-context": "node scripts/update-context.cjs",
