--- a/package.json
+++ b/package.json
@@ -60,10 +60,10 @@
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.0",
     "supertest": "^7.1.1",
-    "ts-jest": "^29.4.0",
-    "turbo": "^2.5.4"
+    "ts-jest": "^29.4.0"
   },
   "dependencies": {
-    "lucide-react": "^0.536.0"
+    "lucide-react": "^0.536.0",
+    "turbo": "^2.5.4"
   }
 }
