fix(deploy): Use npx turbo instead of turbo for Railway compatibility
🚀 Railway Deployment Fix:
- Changed all turbo commands to use 'npx turbo' instead of just 'turbo'
- Ensures Railway can find and execute turbo even in production builds
- npx automatically looks for locally installed packages in node_modules/.bin

🔧 Scripts Updated:
- build: 'turbo run build' → 'npx turbo run build' (most critical for Railway)
- dev: 'turbo run dev' → 'npx turbo run dev'
- lint: 'turbo run lint' → 'npx turbo run lint'
- lint:fix: 'turbo run lint:fix' → 'npx turbo run lint:fix'
- test: 'turbo run test' → 'npx turbo run test'
- test:coverage: 'turbo run test:coverage' → 'npx turbo run test:coverage'
- typecheck: 'turbo run typecheck' → 'npx turbo run typecheck'

✅ Why This Works:
- npx resolves packages from node_modules/.bin automatically
- No reliance on global turbo installation or PATH configuration
- Works consistently across different deployment environments
- Railway's build process will now find turbo correctly

🎯 Production Ready:
- Turbo already moved to dependencies (previous fix)
- All turbo commands now use npx for reliability
- Railway deployment should succeed

--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "turbo run dev",
-    "build": "turbo run build",
-    "lint": "turbo run lint",
-    "lint:fix": "turbo run lint:fix",
+    "dev": "npx turbo run dev",
+    "build": "npx turbo run build",
+    "lint": "npx turbo run lint",
+    "lint:fix": "npx turbo run lint:fix",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
-    "test": "turbo run test",
+    "test": "npx turbo run test",
     "test:api": "cd apps/api && npm run test",
     "test:web": "cd apps/web && npm run test",
-    "test:coverage": "turbo run test:coverage",
-    "typecheck": "turbo run typecheck",
+    "test:coverage": "npx turbo run test:coverage",
+    "typecheck": "npx turbo run typecheck",
     "prepare": "if [ -d 'node_modules/husky' ]; then husky; fi",
     "safety-check": "node scripts/verify-critical-files.cjs",
     "emergency-recovery": "node scripts/emergency-recovery.cjs",
