🚀 CRITICAL: Fix Railway deployment configuration for web app
💡 Railway Deployment Fixes:
- Updated railway.json to use web-specific Dockerfile (apps/web/Dockerfile)
- Fixed web Dockerfile build process for standalone deployment
- Added 'output: standalone' to Next.js config for Docker compatibility
- Removed problematic .env.production dependency (Railway provides env vars directly)
- Changed build directory context to /app/apps/web for proper npm run build

🎯 Key Changes:
1. Railway Configuration:
   - dockerfilePath: 'Dockerfile' → 'apps/web/Dockerfile'
   - Now deploys ONLY the web app instead of trying to build API + web

2. Web Dockerfile Improvements:
   - Removed problematic .env.production COPY that was failing
   - Fixed build command: 'npm run build --workspace=web' → 'npm run build'
   - Set proper WORKDIR /app/apps/web before building

3. Next.js Configuration:
   - Added 'output: standalone' for Docker deployment compatibility
   - Enables Next.js to create self-contained server.js file

✅ Expected Results:
- Railway will now build only the web application
- No more 'turbo: not found' errors (using direct npm commands)
- No more .env.production file errors
- Web app will run on port 3000 with proper health checks
- Standalone deployment ready for production scaling

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -19,11 +19,11 @@ COPY apps/web/ ./apps/web/
 COPY tsconfig.json ./
 COPY turbo.json ./
 
-# Copy environment files for build-time configuration
-COPY .env.production ./apps/web/.env.production
+# Railway provides environment variables directly, no .env file needed
 
 # Build the application
-RUN npm run build --workspace=web
+WORKDIR /app/apps/web
+RUN npm run build
 
 # Production stage
 FROM node:20-alpine AS production
