--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.22.0",
     "lucide-react": "^0.263.1",
-    "next": "^13.4.19",
+    "next": "14.2.5",
     "next-auth": "^4.24.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
