🔄 FORCE VERCEL REDEPLOY: Trigger new build with latest fixes
- Next.js 14.2.5 (fixes SWC download failure)
- Removed auth pages and API routes
- Clean configuration without invalid options
- All deployment fixes from previous commit should now apply

--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,6 @@
   "outputDirectory": "apps/web/out",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "ignoreCommand": "git diff HEAD^ HEAD --quiet . || echo 'rebuild'"
+  "ignoreCommand": "git diff HEAD^ HEAD --quiet . || echo 'rebuild'",
+  "version": 2
 }
