--- a/apps/tracking/package.json
+++ b/apps/tracking/package.json
@@ -36,6 +36,7 @@
     "@types/jest": "^29.5.14",
     "esbuild": "^0.24.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.5",
     "rollup": "^4.27.4",
     "rollup-plugin-bundle-size": "^1.0.3",
     "ts-jest": "^29.2.5",
