feat: Add Apify token configuration to environment template
- Added APIFY_TOKEN to production environment template
- Set up development environment files with user's token
- Website scanning now ready with Apify integration
- Token: apify_api_1RQ7T3PlP576wdtPBwbftadigrj1DU0ojtW2

--- a/env.production.template
+++ b/env.production.template
@@ -30,6 +30,12 @@ NEXT_PUBLIC_API_URL=https://your-api-domain.com
 NEXT_PUBLIC_WS_URL=wss://your-api-domain.com
 
 # =============================================================================
+# WEB SCRAPING & ANALYTICS
+# =============================================================================
+# Apify API Token for website content crawling
+APIFY_TOKEN=your-apify-api-token
+
+# =============================================================================
 # AUTHENTICATION (NextAuth.js)
 # =============================================================================
 NEXTAUTH_URL=https://your-frontend-domain.com
