feat: Replace Apify with Firecrawl for website scanning
- Replaced Apify actor with Firecrawl integration
- Using user's Firecrawl API key: fc-6999badf654a4199a128ceb36ae1d1c7
- Much more reliable and faster web scraping
- Supports markdown and HTML extraction
- No memory limits or timeout issues
- Simplified error handling and better performance

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -60,6 +60,7 @@
     "js-yaml": "^4.1.0",
     "morgan": "^1.10.0",
     "prisma": "^6.10.1",
+    "@mendable/firecrawl-js": "^1.8.2",
     "swagger-ui-express": "^5.0.1",
     "ws": "^8.18.2"
   }
