--- a/env.production.template
+++ b/env.production.template
@@ -32,8 +32,8 @@ NEXT_PUBLIC_WS_URL=wss://your-api-domain.com
 # =============================================================================
 # WEB SCRAPING & ANALYTICS
 # =============================================================================
-# Apify API Token for website content crawling
-APIFY_TOKEN=your-apify-api-token
+# Firecrawl API Key for website content crawling
+FIRECRAWL_API_KEY=your-firecrawl-api-key
 
 # =============================================================================
 # AUTHENTICATION (NextAuth.js)
