--- a/env.production.template
+++ b/env.production.template
@@ -36,6 +36,12 @@ NEXT_PUBLIC_WS_URL=wss://your-api-domain.com
 FIRECRAWL_API_KEY=your-firecrawl-api-key
 
 # =============================================================================
+# AI SERVICES
+# =============================================================================
+# Google Gemini API Key for AI-powered content generation
+GEMINI_API_KEY=your-gemini-api-key
+
+# =============================================================================
 # AUTHENTICATION (NextAuth.js)
 # =============================================================================
 NEXTAUTH_URL=https://your-frontend-domain.com
