--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,4 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "version": 2,
-  "functions": {
-    "pages/api/**/*.js": {
-      "runtime": "@vercel/node"
-    },
-    "pages/api/**/*.ts": {
-      "runtime": "@vercel/node"
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    }
-  ]
+  "version": 2
 }
